A5 - DevOps - corrigir lint swagger e logging estruturado
